istio/dev/gateway-dev.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: app-dev-gateway
  namespace: dev
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - app-dev.example.com
    tls:
      httpsRedirect: true
  - port:
      number: 443
      name: https
      protocol: HTTPS
    hosts:
    - app-dev.example.com
    tls:
      mode: SIMPLE
      credentialName: app-dev-tls-secret
